Add Polymer dye integration support